--- a/src/app/atualizar-usuario-endereco/atualizar-usuario-endereco.component.html
+++ b/src/app/atualizar-usuario-endereco/atualizar-usuario-endereco.component.html
@@ -9,7 +9,7 @@
       <div class="card shadow mt-4 mb-4">
 
         <div class="card-header text-center">
-          <h2 class="text-center">Atualizar endereço</h2>
+          <h2 class="text-center">Atualizar endereço <i class="fa-solid fa-map-location-dot"></i></h2>
         </div>
 
         <div class="card-body">
