--- a/src/app/admin-produto/admin-produto.component.css
+++ b/src/app/admin-produto/admin-produto.component.css
@@ -57,3 +57,37 @@ select option:focus {
   text-align: center;
   text-justify: auto;
 }
+/* estilo padrão do checkbox */
+.form-check-input.custom-control-input[type="checkbox"] {
+  background-color: white;
+  border-color: #BC8B3F !important;
+}
+
+/* estilo do checkbox quando selecionado */
+.form-check-input.custom-control-input[type="checkbox"]:checked {
+  background-color: #BC8B3F !important;
+}
+
+.form-check-input.custom-control-input[type="checkbox"]:focus {
+  outline: none;
+  box-shadow: 0 0 8px 2px rgba(188, 139, 63, 0.25);
+  border-color: #BC8B3F !important;
+}
+.card-header{
+  background: rgba(188, 139, 63, 1);
+}
+
+.form-group input:focus{
+  border-color: #BC8B3F !important;
+  box-shadow: 0 0 0 0.2rem rgba(188, 139, 63, 0.25) !important;
+  outline: 0;
+}
+.form-group select:focus{
+  border-color: #BC8B3F !important;
+  box-shadow: 0 0 0 0.2rem rgba(188, 139, 63, 0.25) !important;
+  outline: 0;
+}
+
+.form-group option:hover{
+  background-color: #BC8B3F;
+}
