--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,38 @@
 ::-webkit-scrollbar-thumb {
   background-color: #BC8B3F;
 }
+
+/* estilo padrão do checkbox */
+.form-check-input.custom-control-input[type="checkbox"] {
+  background-color: white;
+  border-color: #BC8B3F !important;
+}
+
+/* estilo do checkbox quando selecionado */
+.form-check-input.custom-control-input[type="checkbox"]:checked {
+  background-color: #BC8B3F !important;
+}
+
+.form-check-input.custom-control-input[type="checkbox"]:focus {
+  outline: none;
+  box-shadow: 0 0 8px 2px rgba(188, 139, 63, 0.25);
+  border-color: #BC8B3F !important;
+}
+.card-header{
+  background: rgba(188, 139, 63, 1);
+}
+
+.form-group input:focus{
+  border-color: #BC8B3F !important;
+  box-shadow: 0 0 0 0.2rem rgba(188, 139, 63, 0.25) !important;
+  outline: 0;
+}
+.form-group select:focus{
+  border-color: #BC8B3F !important;
+  box-shadow: 0 0 0 0.2rem rgba(188, 139, 63, 0.25) !important;
+  outline: 0;
+}
+
+.form-group option:hover{
+  background-color: #BC8B3F;
+}
