--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide m-4" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -6,13 +6,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../assets/images/1.jpg" class="d-block w-50 vh-25 mx-auto rounded-4 shadow-sm" alt="Imagem 1">
+      <img src="../../assets/images/1.jpg" class="d-block w-100 h-25" alt="Imagem 1">
     </div>
     <div class="carousel-item">
-      <img src="../../assets/images/2.jpg" class="d-block w-50 mx-auto rounded-4 shadow-sm" alt="Imagem 2">
+      <img src="../../assets/images/2.jpg" class="d-block w-100 h-25" alt="Imagem 2">
     </div>
     <div class="carousel-item">
-      <img src="../../assets/images/3.jpg" class="d-block w-50 mx-auto rounded-4 shadow-sm" alt="Imagem 3">
+      <img src="../../assets/images/3.jpg" class="d-block w-100 h-25 " alt="Imagem 3">
     </div>
   </div>
   <button class="carousel-control-prev carousel-control-distance" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -28,47 +28,37 @@
 <hr class="my-4">
 
 
-<div class="container text-center rounded-4 mb-4 mt-4 mx-auto">
-  <div class="row justify-content-center text-center">
-    <div class="col-sm-5 mt-4 mb-4 rounded-4 shadow p-4 m-2 my-4">
-      <h2 class="mb-4">Destaques</h2>
+<div class="mt-4 mb-4">
+  <h2 class="mb-4 titulo text-center p-2">Destaques</h2>
 
-      <div class="row">
-        <div class="col-md-4 mb-4" *ngFor="let produto of produtosDestaque">
-          <div class="card h-100 text-white bg-dark" style="height: 340px !important;">
-            <img [src]="produto.imagens && produto.imagens[0]" class="card-img-top img-produto" alt="Imagem do Produto">
-
-            <div class="card-body">
-              <h6 class="card-title">{{produto.nome}}</h6>
-
-              <button href="#" class="btn btn-primary" (click)="getProdutoPorId(produto.id)">Detalhes</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
+  <div class="row reset">
+    <div class="col-md-4 mb-4 text-center reset mx-auto" *ngFor="let produto of produtosDestaque">
+      <img [src]="produto.imagens && produto.imagens[0]" class="img-produto rounded-4" alt="Imagem do Produto">
     </div>
-
-    <div class="col-sm-5 mt-4 mb-4 rounded-4 shadow p-4 m-2 my-4">
-      <h2 class="mb-4">Ofertas</h2>
-
-      <div class="row">
-        <div class="col-md-4 mb-4" *ngFor="let produto of produtosOferta">
-          <div class="card h-100 text-white bg-dark"style="height: 340px !important;">
-            <img [src]="produto.imagens && produto.imagens[0]" class="card-img-top img-produto" alt="Imagem do Produto">
-
-            <div class="card-body">
-              <h6 class="card-title">{{produto.nome}}</h6>
-
-              <button href="#" class="btn btn-primary" (click)="getProdutoPorId(produto.id)">Detalhes</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
   </div>
+</div>
+
+
+    <div class="mt-4 mb-4">
+      <h2 class="mb-4 titulo text-center p-2">Ofertas</h2>
+
+      <div class="row reset ">
+        <div class="col-md-2 mb-4 text-center mx-auto" *ngFor="let produto of produtosOferta">
+          <div class="card text-custom  ">
+            <img [src]="produto.imagens && produto.imagens[0]" class="card-img-top  " alt="Imagem do Produto">
+
+            <div class="card-body">
+              <h6 class="card-title">{{produto.nome}}</h6>
+
+              <button href="#" class="btn btn-primary" (click)="getProdutoPorId(produto.id)">Detalhes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
 
   <!-- <div class="container mt-4">
     <h2>Instagram</h2>
@@ -87,4 +77,4 @@
       </li>
     </ul>
   </div> -->
-</div>
+
